code/force-app/main/default/objects/Account/fields/FinServ__PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>