code/force-app/main/default/objects/Account/fields/FinServ__ReferredByContact__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ReferredByContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Referrals</relationshipLabel>
    <relationshipName>AccountContactReferrals</relationshipName>
    <type>Lookup</type>
</CustomField>