code/force-app/main/default/objects/Account/fields/FinServ__TotalBankDeposits__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalBankDeposits__c</fullName>
    <description>Value of all banking deposit accounts.</description>
    <formula>FinServ__TotalBankDepositsJointOwner__c + FinServ__TotalBankDepositsPrimaryOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bank Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>