code/force-app/main/default/objects/Account/fields/FinServ__TotalFinancialAccounts__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalFinancialAccounts__c</fullName>
    <description>Sum of Total Bank Deposits and Total Investments.</description>
    <formula>FinServ__TotalFinAcctsPrimaryOwner__c  + FinServ__TotalFinAcctsJointOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Financial Accounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>