code/force-app/main/default/objects/Account/fields/FinServ__TotalHeldFinAcctsPrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalHeldFinAcctsPrimaryOwner__c</fullName>
    <description>Calculated total of held financial account balances where the client is the primary owner of either individually owned or jointly owned accounts.</description>
    <label>Total Held Financial Accounts Primary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>