code/force-app/main/default/objects/Account/fields/FinServ__TotalInsurance__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalInsurance__c</fullName>
    <description>Value of all insurance policies.</description>
    <formula>FinServ__TotalInsurancePrimaryOwner__c + FinServ__TotalInsuranceJointOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>