code/force-app/main/default/objects/Account/fields/FinServ__TotalInsurancePrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalInsurancePrimaryOwner__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value of all insurance policies for which the client is the primary owner.</description>
    <label>Total Insurance Primary Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>