code/force-app/main/default/objects/Account/fields/FinServ__TotalLiabilities__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalLiabilities__c</fullName>
    <description>Value of all liabilities accounts.</description>
    <formula>FinServ__TotalLiabilitiesPrimaryOwner__c + FinServ__TotalLiabilitiesJointOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>