code/force-app/main/default/objects/Account/fields/FinServ__TotalNonfinancialAssets__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalNonfinancialAssets__c</fullName>
    <description>Value of all physical assets such as collectibles or precious metals.</description>
    <formula>FinServ__TotalNonfinancialAssetsPrimaryOwner__c + FinServ__TotalNonfinancialAssetsJointOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Nonfinancial Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>