code/force-app/main/default/objects/Account/fields/FinServ__TotalNumberOfFinAccounts__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalNumberOfFinAccounts__c</fullName>
    <description>Total number of the client&apos;s financial accounts that are managed by our firm.</description>
    <formula>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c + FinServ__TotalNumberOfFinAccountsJointOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Financial Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>