code/force-app/main/default/objects/Account/fields/FinServ__TotalOutstandingCredit__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalOutstandingCredit__c</fullName>
    <description>Value of client&apos;s total outstanding credit from the financial accounts that are managed by our firm.</description>
    <formula>FinServ__TotalOutstandingCreditPrimaryOwner__c + FinServ__TotalOutstandingCreditJointOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>