code/force-app/main/default/objects/Account/fields/FinServ__WalletShare__c.field-meta.xml
<CustomField>
    <fullName>FinServ__WalletShare__c</fullName>
    <formula>ROUND(((FinServ__TotalHeldFinAcctsPrimaryOwner__c + FinServ__TotalHeldFinAcctsJointOwner__c) / IF( (FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c)=0,1,(FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c))), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wallet Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>