code/force-app/main/default/objects/Account/fields/GMB__c.field-meta.xml
<CustomField>
    <fullName>GMB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>企網銀</label>
    <type>Checkbox</type>
</CustomField>