code/force-app/main/default/objects/Account/fields/Group_Limit__c.field-meta.xml
<CustomField>
    <fullName>Group_Limit__c</fullName>
    <label>集團限額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>