code/force-app/main/default/objects/Account/fields/Group_Loan_Data__c.field-meta.xml
<CustomField>
    <fullName>Group_Loan_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>授信集團歸戶</label>
    <type>Checkbox</type>
</CustomField>