code/force-app/main/default/objects/Account/fields/Has_Approved_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Has_Approved_Account_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>至少填過一份年度經營計劃</description>
    <label>有過覆核經營計畫</label>
    <type>Checkbox</type>
</CustomField>