code/force-app/main/default/objects/Account/fields/Has_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Has_Relationship__c</fullName>
    <label>是否有關係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>