code/force-app/main/default/objects/Account/fields/Headquarter__c.field-meta.xml
<CustomField>
    <fullName>Headquarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>集團核心公司</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (集團核心公司)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>