code/force-app/main/default/objects/Account/fields/Import_Amount__c.field-meta.xml
<CustomField>
    <fullName>Import_Amount__c</fullName>
    <label>進口實績</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0~3</fullName>
            </value>
            <value>
                <fullName>3~7</fullName>
            </value>
            <value>
                <fullName>7~10</fullName>
            </value>
            <value>
                <fullName>10以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>