code/force-app/main/default/objects/Account/fields/Import_OA__c.field-meta.xml
<CustomField>
    <fullName>Import_OA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>進口OA</label>
    <type>Checkbox</type>
</CustomField>