code/force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>主計處行業別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>010111</fullName>
                <label>稻作栽培業</label>
            </value>
            <value>
                <fullName>製造業</fullName>
            </value>
            <value>
                <fullName>農、林、漁、牧業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>