code/force-app/main/default/objects/Account/fields/Internal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否為行內客戶</label>
    <type>Checkbox</type>
</CustomField>