code/force-app/main/default/objects/Account/fields/Invalid_Group__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>無效集團</label>
    <type>Checkbox</type>
</CustomField>