code/force-app/main/default/objects/Account/fields/Investment_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Investment_Attributes__c</fullName>
    <label>投資屬性</label>
    <length>100</length>
    <type>Text</type>
</CustomField>