code/force-app/main/default/objects/Account/fields/Is_Collatoral__c.field-meta.xml
<CustomField>
    <fullName>Is_Collatoral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否為保證人</label>
    <type>Checkbox</type>
</CustomField>