code/force-app/main/default/objects/Account/fields/Is_Collatoral_CIF__c.field-meta.xml
<CustomField>
    <fullName>Is_Collatoral_CIF__c</fullName>
    <formula>IF( Is_Collatoral__c = TRUE,&quot;Y&quot;,&quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>是否為保證人(CIF)</label>
    <type>Text</type>
</CustomField>