code/force-app/main/default/objects/Account/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <description>Used in Lightning Page to check if the current user is the owner of the current Account record</description>
    <formula>$User.Id =  OwnerId</formula>
    <label>是否擁有者</label>
    <type>Checkbox</type>
</CustomField>