code/force-app/main/default/objects/Account/fields/KYC_Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Valid_Date__c</fullName>
    <label>KYC 有效期限</label>
    <type>Date</type>
</CustomField>