code/force-app/main/default/objects/Account/fields/Last_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Last_Data_Source__c</fullName>
    <label>最近資料來源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>客登</fullName>
            </value>
            <value>
                <fullName>CreditLens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>