code/force-app/main/default/objects/Account/fields/LC__c.field-meta.xml
<CustomField>
    <fullName>LC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>開發信用狀</label>
    <type>Checkbox</type>
</CustomField>