code/force-app/main/default/objects/Account/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>授信戶</label>
    <type>Checkbox</type>
</CustomField>