code/force-app/main/default/objects/Account/fields/Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance__c</fullName>
    <label>放款餘額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>