code/force-app/main/default/objects/Account/fields/Managed_RM__c.field-meta.xml
<CustomField>
    <fullName>Managed_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>經管 RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>