code/force-app/main/default/objects/Account/fields/Management_Status__c.field-meta.xml
<CustomField>
    <fullName>Management_Status__c</fullName>
    <label>經管狀態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無經管</fullName>
                <default>true</default>
                <label>無經管</label>
            </value>
            <value>
                <fullName>開發中</fullName>
            </value>
            <value>
                <fullName>已經管</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>