code/force-app/main/default/objects/Account/fields/MSR__c.field-meta.xml
<CustomField>
    <fullName>MSR__c</fullName>
    <label>風險評等</label>
    <length>2</length>
    <type>Text</type>
</CustomField>