code/force-app/main/default/objects/Account/fields/Name_Of_Employer_3__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Employer_3__c</fullName>
    <label>服務機構3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>