code/force-app/main/default/objects/Account/fields/Nationality_2__c.field-meta.xml
<CustomField>
    <fullName>Nationality_2__c</fullName>
    <label>國籍2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>