code/force-app/main/default/objects/Account/fields/Net_Profit_YTD__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_YTD__c</fullName>
    <label>近一年貢獻度總和</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>