code/force-app/main/default/objects/Account/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <label>下次應辦理年審日期</label>
    <type>Date</type>
</CustomField>