code/force-app/main/default/objects/Account/fields/Next_Review_Month__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Month__c</fullName>
    <label>下次應辦理年審月份</label>
    <length>6</length>
    <type>Text</type>
</CustomField>