code/force-app/main/default/objects/Account/fields/Office_Tel_Ext__c.field-meta.xml
<CustomField>
    <fullName>Office_Tel_Ext__c</fullName>
    <label>分機</label>
    <length>10</length>
    <type>Text</type>
</CustomField>