code/force-app/main/default/objects/Account/fields/Orig_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Orig_Data_Source__c</fullName>
    <label>原始資料來源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>