code/force-app/main/default/objects/Account/fields/Paidin_Capital__c.field-meta.xml
<CustomField>
    <fullName>Paidin_Capital__c</fullName>
    <label>實收資本額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>