code/force-app/main/default/objects/Account/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>薪轉戶</label>
    <type>Checkbox</type>
</CustomField>