code/force-app/main/default/objects/Account/fields/Person_Age__c.field-meta.xml
<CustomField>
    <fullName>Person_Age__c</fullName>
    <formula>TEXT(ROUND((TODAY() -  PersonBirthdate )/365, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年齡</label>
    <type>Text</type>
</CustomField>