code/force-app/main/default/objects/Account/fields/PI__c.field-meta.xml
<CustomField>
    <fullName>PI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>專業投資人</label>
    <type>Checkbox</type>
</CustomField>